--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,8 @@ encoding//WebContent/WEB-INF/templates/admin/header.jsp=UTF-8
 encoding//WebContent/WEB-INF/templates/admin/left-bar.jsp=UTF-8
 encoding//WebContent/error.jsp=UTF-8
 encoding//src/constant/Defines.java=UTF-8
+encoding//src/controller/AdminAuthorController.java=UTF-8
+encoding//src/controller/AdminPublisherController.java=UTF-8
 encoding//src/controller/AdminThongKeController.java=UTF-8
 encoding//src/controller/AdminUserController.java=UTF-8
 encoding//src/controller/PublicController.java=UTF-8
